updated info message text and text-align position

--- a/popup.html
+++ b/popup.html
@@ -22,7 +22,7 @@
         </div>
         <div class="tooltip">
             <i style="visibility:hidden;" id="instructions" class="far fa-question-circle info">
-                <span class="tooltiptext">A new file has been created! Now press "Ctrl+Shift+P" ("Cmd+Shift+P" in OSX) to copy selected text to the file, in any tab. When you finish the process, click the download or delete icons</span>
+                <span class="tooltiptext">File created! </br>Press "Ctrl+Shift+P" ("Cmd+Shift+P" in OSX) to copy selected text to the file. When you're done, click to download or delete the file</span>
             </i>
         </div>
     </body>
